Bug 43820 - debugging stl abort on viewing a ppsx
Summary: debugging stl abort on viewing a ppsx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-14 05:36 UTC by Caolán McNamara
Modified: 2012-01-10 15:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
possible hack to fix (1.50 KB, patch)
2011-12-14 05:36 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2011-12-14 05:36:24 UTC
Created attachment 54420 [details]
possible hack to fix

The sample .ppts from https://bugzilla.redhat.com/show_bug.cgi?id=755352 i.e. http://lara.epfl.ch/~kuncak/talks/ScalaZ3.ppsx blows up our stl debugging iterators.

"iterateActionClassifications" doesn't find anything so aFunctor.getBeginElement and aFunctor.getEndElement return the default ctored iterators.

plausible patch attached
Comment 1 Thorsten Behrens (allotropia) 2012-01-10 15:16:13 UTC
Though this seems fixed (with the fixes around the broken text animation), applied the spirit of your fix, such that iterators are now properly initialized before doing math with them. Thanks for the catch!