Fix fdo#43820 - properly initialize iterators before math.